--- a/index.html
+++ b/index.html
@@ -275,5 +275,9 @@ scale:2}).then(function(canvas) {
 
 })
 </script>
+
+
+
+  <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "6dbbdf5abf554fb4bfb95964a7595858"}'></script><!-- End Cloudflare Web Analytics -->
   </body>
 </html>
