--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
-<meta property="og:url" content="//hieunotes.pages.dev/lcd/" />
+<meta property="og:url" content="//tayninh.vercel.app" />
 <meta property="og:title" content="Hieunotes | Lịch Cúp Điện" />
 <meta property="og:description" content="Cập nhật lịch tạm ngừng cung cấp điện Điện lực Tây Ninh mới nhất." />
 <meta property="og:image" content="//s6.imgcdn.dev/W5WJC.png" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:url" content="//hieunotes.pages.dev/lcd/" />
+<meta property="twitter:url" content="//tayninh.vercel.app" />
 <meta property="twitter:title" content="Hieunotes | Lịch Cúp Điện" />
 <meta property="twitter:description" content="Cập nhật lịch tạm ngừng cung cấp điện Điện lực Tây Ninh mới nhất." />
 <meta property="twitter:image" content="//s6.imgcdn.dev/W5WJC.png" />
@@ -203,8 +203,9 @@ body, html {
     <p>
 2024 - <strong class="colorfull">Harry Dang</strong><br/>
 Lượt truy vấn: <strong id="requestCount">000</strong></p>
+<a href="//hieunotes.vercel.app/" class="text-decoration-none">NẾU GẶP LỖI? CLICK VÀO ĐÂY BÁO CÁO NGAY NHÉ!</a>
 </footer>
-<img src="https://s6.imgcdn.dev/HLZmv.jpg" class="img-fluid mx-auto d-block" style="width:20rem " alt="Hieunotes Lịch Cúp Điện Tây Ninh">
+<img src="https://s6.imgcdn.dev/HLZmv.jpg" class="img-fluid mx-auto d-block mt-4" style="width:20rem " alt="Hieunotes Lịch Cúp Điện Tây Ninh">
  
 
 
